syntax = "proto3";

package parstech;

option csharp_namespace = "Parstech.Shop.Shared.Protos";

import "google/protobuf/timestamp.proto";
import "Common.proto";

// PRODUCT SERVICE DEFINITIONS

// Product Service for client-side product discovery and browsing
service ProductService {
  // Basic product operations
  rpc GetProducts (ProductsRequest) returns (ProductsResponse);
  rpc GetProductsByCategory (CategoryProductsRequest) returns (ProductsResponse);
  rpc GetProductsByBrand (BrandProductsRequest) returns (ProductsResponse);
  rpc GetProductsByIds (ProductIdsRequest) returns (ProductsResponse);
  rpc GetFeaturedProducts (FeaturedProductsRequest) returns (ProductsResponse);
  rpc GetNewArrivals (NewArrivalsRequest) returns (ProductsResponse);
  rpc GetBestSellers (BestSellersRequest) returns (ProductsResponse);
  rpc GetDiscountedProducts (DiscountedProductsRequest) returns (ProductsResponse);
  rpc SearchProducts (SearchRequest) returns (ProductsResponse);
}

// Product Detail Service for client-side product details
service ProductDetailService {
  // Detail operations
  rpc GetProductDetail (ProductDetailRequest) returns (ProductDetailResponse);
  rpc GetProductGallery (ProductDetailRequest) returns (ProductGalleryResponse);
  rpc GetProductProperties (ProductDetailRequest) returns (ProductPropertiesResponse);
  rpc GetProductSpecifications (ProductDetailRequest) returns (ProductSpecificationsResponse);
  rpc GetRelatedProducts (ProductDetailRequest) returns (RelatedProductsResponse);
  rpc GetProductReviews (ProductReviewsRequest) returns (ProductReviewsResponse);
  rpc SubmitProductReview (ProductReviewRequest) returns (ProductReviewResponse);
}

// Product Inventory Service for inventory management
service ProductInventoryService {
  // Inventory operations
  rpc CheckProductAvailability (ProductAvailabilityRequest) returns (ProductAvailabilityResponse);
  rpc GetProductStock (ProductStockRequest) returns (ProductStockResponse);
  rpc ReserveProductStock (ReserveStockRequest) returns (ReserveStockResponse);
  rpc ReleaseProductStock (ReleaseStockRequest) returns (ReleaseStockResponse);
}

// Product Price Service for pricing operations
service ProductPriceService {
  // Price operations
  rpc GetProductPrice (ProductPriceRequest) returns (ProductPriceResponse);
  rpc GetProductDiscount (ProductDiscountRequest) returns (ProductDiscountResponse);
  rpc CalculateProductPriceWithOptions (ProductPriceOptionsRequest) returns (ProductPriceOptionsResponse);
}

